# SPLC2py

./: .gitignore  Dockerfile  README.md  pyproject.toml
splc2py/: _logs.py  _parsing.py  _preprocess.py  _splc.py  _transform.py  fmodel.py  learning.py  sampling.py
splc2py/data/: schema_splc.xsd
tests/: test_splc2py.py
tests/data/: test_fm.xml
