[tool.poetry]
name = "splc2py"
version = "0.1.0"
description = ""
authors = ["Alina Mailach <alina.mailach@informatik.uni-leipzig.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
docker = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
