[tool.poetry]
name = "splc2py"
version = "0.1.0"
description = ""
authors = ["Alina Mailach <alina.mailach@informatik.uni-leipzig.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
docker = "^6.0.0"
pylint = "^2.15.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
